css/style.css
body{
    overflow-x: hidden;
}

.navbar{
    width: 100%;
}

.intro
{
    background: url(../images/bcimg.jpg);
    -webkit-background-size: 100% auto;
    background-size: 100% auto;
    background-repeat: no-repeat;

}

@media(max-width: 420px)
{
    .intro
    {
        -webkit-background-size: auto 100%;
        background-size: auto 100%;
        background-position: center;
    }
}

.intro-text
{
    line-height: 1.5;
    color: #842020;
    font-size: 1.9em;
}

@media(max-width: 991px)
{
    .intro-text
    {
        font-size: 1.7em;
    }
}

@media(max-width: 900px)
{
    .intro-text
    {
        font-size: 1.5em;
    }
}

@media(max-width: 767px)
{
    .intro-text
    {
        font-size: 1.3em;
    }
}

@media(max-width: 570px)
{
    .intro-text
    {
        font-size: 1.1em;
    }
}

.about
{
    display: flex;
    justify-content: center;
    text-align: center;
}

@media(max-width: 991px)
{
    .abouth4
    {
        font-size: 1.3em;
    }
}

@media(max-width: 900px)
{
    .abouth4
    {
        font-size: 1.2em;
    }
}

@media(max-width: 767px)
{
    .abouth4
    {
        font-size: 1.1em;
    }
}

@media(max-width: 570px)
{
    .abouth4
    {
        font-size: 1.0em;
    }
}

@media(max-width: 400px)
{
    .abouth4
    {
        font-size: 0.8em;
    }
}

.Competitions{
    display: flex;
    justify-content: center;
    text-align: center;
    color: #842020;

}
.comph4{
    display: flex;
    justify-content: center;
    text-align: center;
    line-height: 1.3;
}
.carouselSRM{
    text-align: center;
    width: 20%;
    margin-left: 40%;
}
.SRMcomp1 {
    display: flex;
    justify-content: center;
    text-align: center;
}
.carouselTC{
    text-align: center;
    width: 30%;
    margin-left: 35%;
}
.BUGvideo{
    width: 40%;
    margin-left: 31%;
}

@media (min-width: 320px) and (max-width: 765px){

    .bctext{
        font-size: 91%;
    }
    .comph1{
        font-size: 150%;
    }
    .comph4{
        font-size: 123%;
    }
    .BUGvideo {
        width: 50%;
        margin-left: 25%;
    }
    .carouselSRM {
        width: 50%;
        margin-left: 25%;
    }
    .SRMcomp1 {
        font-size: 79%;
    }
    .carouselTC{
    width: 61%;
    margin-left: 20%;
    }
}

@media (min-width: 768px) and (max-width: 1024px){
    .bctext{
        font-size: 200%;
        font-weight: bold;
    }

    .comph4{
        font-size: 144%;
        
    }
    .carouselSRM {
        width: 29%;
    margin-left: 35%;
     }
     .carouselTC {
        
        width: 41%;
        margin-left: 29%;
    }
    .BUGvideo {
        width: 48%;
        margin-left: 25%;
    }

}

.project-image
{
    height: 60px;
}

.project-title
{
    font-size: 20px;
}

.project-box
{
    font-size: 14px;
}

.project-des
{
    font-size: 16px;
}

